--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- title here -->
-    <title>This is Title</title>
+    <title>VoicePro Admin Dashboard</title>
 
     <!-- favicon here -->
     <link rel="icon" href="img/logo.png" type="image/png" sizes="16x16">
@@ -15,10 +15,6 @@
     <!-- all CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome-all.min.css">
-
-
-
-
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
 
